--- a/app/static/style.css
+++ b/app/static/style.css
@@ -122,7 +122,7 @@ background-color: #363062;
 .street0 {
   background-color: #007965;
 }
-.street1 {
+/* .street1 {
   background-color: #630000;
 }
 .street2 {
@@ -133,7 +133,7 @@ background-color: #363062;
 }
 .street4 {
   background-color: #D9D7F1;
-}
+} */
 .shock {
   margin-top: 5%;
   margin-left: 10%;
