--- a/app/templates/not.html
+++ b/app/templates/not.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
   </head>
-  <body class="street{{ran}}">
+  <body class="street0">
     <div >
     <h1 class="sir for-white">Location Not Available in our DataBase!</h1>
     <div class="shock">
