--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name= "viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angelo's Creation!</title>
+    <title>Weather Box</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="static/style.css">
@@ -30,7 +30,7 @@
     <video autoplay muted loop playsinline id="myVideo"><source src="static/weats.mp4" type="video/mp4"></video>
     <video autoplay muted loop playsinline id="mydancing"><source src="static/wff.mp4" type="video/mp4"></video>
     <header>
-    <span class="heading">WEATHER  BOX</span>
+    <h1 class="heading">WEATHER <span class="pinky"> BOX</span></h1>
       <nav>
         <ul class="docking">
           <li><button class="btn btn-dark " id="ff" type="submit"><a class="link-line" href="#">Local News</a></button></li>
@@ -41,7 +41,7 @@
 
     <nav class="navbar navbar-light bg-dark p-2 text-dark bg-opacity-75 fixed-top" id="view">
   <div class="container-fluid">
-    <a class="navbar-brand" id="second-title" href="#">WEATHER  BOX</a>
+    <a class="navbar-brand" id="second-title" href="#">WEATHER <span class="pinky"> BOX</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -80,10 +80,10 @@
 </nav>
 </div>
 <form class="stable" method="POST" action="">
-  <input class="search fer" name="name" type="search" placeholder="Search" aria-label="Search">
+  <input class="search fer" name="name" type="search" placeholder="Enter location" aria-label="Search">
   <button class="btn btn-success"id= "ff" type="submit">Search</button>
 </form>
-
+<!-- <button class="btn btn-dark return" id="ff" type="submit"><a class="link-line" href={{url_for("home")}}>Back</a></button> -->
 <div class="info-back for-white">
   <div class="inner-back">
 <img class="esize my-location" src="static/location.png" alt=""><h1 class="put-inline samee">{{location["city"]}}, {{location["country"]}}</h1>
@@ -150,7 +150,7 @@
    <a href="https://twitter.com/angelokhare"><img class="social" src="static/twitter.png" alt=""></a>
    <a href="https://www.linkedin.com/in/angelo-enamuehen-4b9210238/"><img class="social" src="static/linkedin.png" alt=""></a>
    <a href="https://www.instagram.com/angelokhare/"><img class="social" src="static/instagram.png" alt=""></a> -->
-   <h5 class= "bottom">©<span><a class="bk" href="https://angelokhare.github.io/World/index.html">Copyright ANGELOKHARE {{bot}}<br>Design by: ANGELOKHARE</a></span></h5>
+   <h5 class= "bottom">©<span><a class="bk" href="http://angelokhare.herokuapp.com">Copyright ANGELOKHARE {{bot}}<br>Design by: ANGELOKHARE</a></span></h5>
  </div>
  </footer>
 
