--- a/templates/not.html
+++ b/templates/not.html
@@ -17,10 +17,11 @@
   </head>
   <body class="street0">
     <div >
-    <h1 class="sir for-white">Location Not Available in our DataBase!</h1>
     <div class="shock">
-<img class="disimg" src="static/disappointed.png" alt="">
-<img class="disimg" src="static/dissatisfaction.png" alt="">
+<img class="disimg" src="static/error-404.png" alt="">
+<!-- <img class="disimg" src="static/dissatisfaction.png" alt=""> -->
+<h1 class="sir for-white">sorry, Location not Available!</h1>
+<button class="btn sliff " id="ff" type="submit"><a class="link-line" href={{url_for("home")}}>Back to Home Page</a></button>
     </div>
     </div>
     <footer>
