--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -76,7 +76,7 @@
   </div>
 </nav>
 </div>
-<div>
+<div class="differ">
     <img class="yeezy" src="static/weather.png" alt="">
     <h1 class="welfir">Weather <span class="welsec">Box</span></h1>
     <p class="param">On an everyday basis, many use weather forecasts to determine what to wear on a given day. Since outdoor activities are severely curtailed by heavy rain, snow and wind chill, forecasts can be used to plan activities around these events, and to plan ahead and survive them.</p>
