--- a/templates/search.html
+++ b/templates/search.html
@@ -124,8 +124,8 @@
   {%for gh in range(jh):  %}
   <div class="item d{{gh}} for-white">
     <div class="ups">
-      <h1 class="size-up">{{mm}} {{gv[gh]}}</h1>
-      <h1 class="size-up">{{future[gh]["day"]}}</h1>
+      <h1 class="size-up">{{er[gh]}} {{gv[gh]}}</h1>
+      <h1 class="size-up">{{yu[gh]}}</h1>
       <h1 class="size-down">{{future[gh]["text"]}}</h1>
     <img class="dabbing" src="static/{{future[gh]['code']}}.png" alt="">
     <img class="esizes" src="static/thermometer.png" alt=""><h1 class=" put-inline size-uped">{{future[gh]["low"]}}° - {{future[gh]["high"]}}°</h1>
