--- a/templates/not.html
+++ b/templates/not.html
@@ -30,7 +30,7 @@
           <a href="https://twitter.com/angelokhare"><img class="social" src="static/twitter.png" alt=""></a>
           <a href="https://www.linkedin.com/in/angelo-enamuehen-4b9210238/"><img class="social" src="static/linkedin.png" alt=""></a>
           <a href="https://www.instagram.com/angelokhare/"><img class="social" src="static/instagram.png" alt=""></a> -->
-          <h5 class= "bottom">©<span><a class="bk" href="https://angelokhare.github.io/World/index.html">Copyright ANGELOKHARE {{bot}}<br>Design by: ANGELOKHARE</a></span></h5>
+          <h5 class= "bottom">©<span><a class="bk" href="http://angelokhare.herokuapp.com">Copyright WEATHER BOX {{bot}}<br>Design by: ANGELOKHARE</a></span></h5>
         </div>
         </footer>
        
