--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -87,6 +87,6 @@
 </div>
 <footer>
     <div>
-      <h5 class= "bottom">©<span><a class="bk" href="http://angelokhare.herokuapp.com">Copyright ANGELOKHARE {{bot}}<br>Design by: ANGELOKHARE</a></span></h5>
+      <h5 class= "bottom">©<span><a class="bk" href="http://angelokhare.herokuapp.com">Copyright WEATHER BOX {{bot}}<br>Design by: ANGELOKHARE</a></span></h5>
     </div>
     </footer>
