--- a/templates/search.html
+++ b/templates/search.html
@@ -150,7 +150,7 @@
    <a href="https://twitter.com/angelokhare"><img class="social" src="static/twitter.png" alt=""></a>
    <a href="https://www.linkedin.com/in/angelo-enamuehen-4b9210238/"><img class="social" src="static/linkedin.png" alt=""></a>
    <a href="https://www.instagram.com/angelokhare/"><img class="social" src="static/instagram.png" alt=""></a> -->
-   <h5 class= "bottom">©<span><a class="bk" href="http://angelokhare.herokuapp.com">Copyright ANGELOKHARE {{bot}}<br>Design by: ANGELOKHARE</a></span></h5>
+   <h5 class= "bottom">©<span><a class="bk" href="http://angelokhare.herokuapp.com">Copyright WEATHER BOX {{bot}}<br>Design by: ANGELOKHARE</a></span></h5>
  </div>
  </footer>
 
